@@ -1901,7 +1901,7 @@ public class StationLocationControl extends StationModelControl {
             idItems.add(
                 new TwoFacedObject(
                     StationLocationDisplayable.ID_NAMES[i],
-                    new Integer(StationLocationDisplayable.IDS[i])));
+                    Integer.valueOf(StationLocationDisplayable.IDS[i])));
 
         }
 
@@ -1921,7 +1921,7 @@ public class StationLocationControl extends StationModelControl {
             symbolItems.add(
                 new TwoFacedObject(
                     StationLocationDisplayable.SYMBOL_NAMES[i],
-                    new Integer(StationLocationDisplayable.SYMBOLS[i])));
+                    Integer.valueOf(StationLocationDisplayable.SYMBOLS[i])));
 
         }
 
@@ -2245,10 +2245,10 @@ public class StationLocationControl extends StationModelControl {
     public void actionPerformed(ActionEvent ae) {
         String cmd = ae.getActionCommand();
         if (cmd.startsWith("symbol")) {
-            symbolType = new Integer(cmd.substring(6)).intValue();
+            symbolType = Integer.parseInt(cmd.substring(6));
             updateDisplayable();
         } else if (cmd.startsWith("id")) {
-            idType = new Integer(cmd.substring(2)).intValue();
+            idType = Integer.parseInt(cmd.substring(2));
             updateDisplayable();
         } else {
             super.actionPerformed(ae);
